# lambda-calculator-website

./: package-lock.json  package.json  svelte.config.js
src/lib/wasm_modules/lambda_calculator/: Cargo.toml
src/lib/wasm_modules/lambda_calculator/src/: lib.rs
src/lib/wasm_modules/lambda_calculator/src/expressions/: mod.rs  untyped_lambda_calculus.rs
src/lib/wasm_modules/lambda_calculator/src/expressions/untyped_lambda_calculus/: app.rs  unty_abs.rs  unty_var.rs
src/lib/wasm_modules/lambda_calculator/src/parsers/: mod.rs  untyped_lambda_calculus.rs
src/routes/: +page.svelte
