[package]
name = "lambda_calculator"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.8.2"
wasm-bindgen = "0.2.92"

[build-dependencies]
cargo-make = "*"

